# Graphics-Experiment

src/: Basic.cpp  Basics.h  CMakeLists.txt  Render.cpp  Render.h  Scene.cpp  Scene.h  config.h  main.cpp
src/object/: Object.cpp  Object.h  Parallelogram.cpp  Parallelogram.h  Triangle.cpp  Triangle.h
src/object/mesh/: Mesh.cpp  Mesh.h  ObjLoader.cpp  ObjLoader.h
src/object/other/: SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h
src/object/surface/: Surface.cpp  Surface.h
src/object/triangle/: ParallelogramSpacial.cpp  ParallelogramSpacial.h  TriangleBase.h  TriangleColor.h  TriangleIllumination.h  TriangleSpacial.cpp  TriangleSpacial.h
src/pm/: Context.h  PMObject.cpp  PMObject.h  PMRect.h  PMRender.cpp  PMRender.h  PMScene.cpp  PMScene.h  Photon.cpp  Photon.h  PhotonTexture.cpp  PhotonTexture.h
